Partial dynamic-access coverage for org.h2.util.MemoryUnmapper (5/6)