@@ -17,6 +17,7 @@ dependencies {
 }
 
 tasks.named("test") {
+    jvmArgs "--add-opens=java.base/java.nio=ALL-UNNAMED"
     systemProperty "h2.nioCleanerHack", "true"
 }
 
